--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,9 @@ importlib-metadata==4.11.3
 itsdangerous==2.1.2
 Jinja2==3.1.1
 MarkupSafe==2.1.1
+numpy==1.22.3
+pandas==1.4.1
+psycopg2==2.9.3
 pycodestyle==2.8.0
 python-dateutil==2.8.2
 python-dotenv==0.20.0
